--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 							<div class="row fronttext">
 								<div class="col-md-12 col-xs-12">
 
-									<h1>Хотите защитить ваш контент от плагиата р11?</h1>
+									<h1>Хотите защитить ваш контент от плагиата?</h1>
 									<span>Автоматическая проверка на уникальность<br/>
-										от 50 копеек за страницу в месяц</span>
+										от 60 копеек за страницу в месяц</span>
 									</div>
 
 
