--- a/portfolio/price_table/index.html
+++ b/portfolio/price_table/index.html
@@ -79,7 +79,7 @@
 
 <div class="dashboard_plans">
 	<div class="dashboard_plans_card">
-		<img src="img/icon_1.webp" alt="icon">
+		<img src="img/icon_1.png" alt="icon">
 		<h4>personal</h4>
 		<span class="price"><sup>$</sup><small>0</small>/month</span>
 		<p>Lorem ipsum dolor sit amet. sed do eiusmod tempor incididunt ut. Labore et dolore magna aliqua. quis nostrud exercitation ullamco laboris. Ea commodo consequat.</p>
@@ -87,7 +87,7 @@
 	</div>
 
 	<div class="dashboard_plans_card">
-			<img src="img/icon_2.webp" alt="icon">
+			<img src="img/icon_2.png" alt="icon">
 			<h4>personal lite</h4>
 			<span class="price"><sup>$</sup><small>29</small>/month</span>
 			<p>Lorem ipsum dolor sit amet. sed do eiusmod tempor incididunt ut. Labore et dolore magna aliqua. quis nostrud exercitation ullamco laboris. Ea commodo consequat.</p>
@@ -95,7 +95,7 @@
 		</div>
 
 		<div class="dashboard_plans_card">
-				<img src="img/icon_3.webp" alt="icon">
+				<img src="img/icon_3.png" alt="icon">
 				<h4>personal xl</h4>
 				<span class="price"><sup>$</sup><small>49</small>/month</span>
 				<p>Lorem ipsum dolor sit amet. sed do eiusmod tempor incididunt ut. Labore et dolore magna aliqua. quis nostrud exercitation ullamco laboris. Ea commodo consequat.</p>
