--- a/portfolio/timeline/index.html
+++ b/portfolio/timeline/index.html
@@ -29,7 +29,7 @@
 <body>
 
 	<!-- Custom HTML -->
- <section class="timeline">
+ <section id="time" class="timeline">
 	 <div class="container">
 		 <div class="row">
 			 <div class="col-md-12">
