--- a/portfolio/gastro/index.html
+++ b/portfolio/gastro/index.html
@@ -96,14 +96,133 @@
 						</div>
 				</form>
 				</div>
-
+				<li class="bottom_number"><a href="tel:+71234567890">+7 123 456 78 90</a></li>
 			</div>
 		</div>
 	</div>
 </nav>
+	<!-- Widget  HTML -->
+<section class="welcome">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 welcome_main">
+					<h3>Мы — судебные юристы. Вести арбитражные дела — лучшее, что мы умеем делать.</h3>
+							<img src="img/vodolaz.jpg" alt="Vodolaskiy">
+			</div>
+		</div>
+	</div>
+</section>
+	<!-- End Widget  HTML -->
+<section class="work_principles">
+	<div class="container">
+		<div class="row">
+			<div class="work_principles__text">
+				<p>Практика судебной работы 20 лет</p>
+				<p>Заказчик передает нам проблему и может заниматься своей деятельностью, а его проблема становится нашей</p>
+				<p>В больших делах мы сами организуем командную работу финансовых и технических специалистов</p>
+			</div>
+		</div>
+	</div>
+</section>
+	<!-- End Widget  HTML -->
+	<section class="we_do">
+		<div class="container">
+			<div class="row we_do__row">
+				<h4>Мы делаем</h4>
+				<ul class="we_do__list">
+					<div class="left_list">
+							<li>Оспаривание сделок и контрактов.</li>
+							<li>Споры с государственным заказчиком.</li>
+							<li>Взыскание дебиторской задолженности (дебиторки) и убытков.</li>
+							<li>Оспаривание результатов налоговой проверки в административном и в судебном порядке</li>		
+					</div>
+					<div class="right_list">
+							<li>Регистрация, реорганизация, ликвидация и банкротство компаний.</li>
+							<li>Сопровождение и ведение процедур банкротства.</li>
+							<li>Защита собственности. Защита от рейдеров.</li>
+							<li>Регистрация товарных знаков. Защита интеллектуальных прав.</li>
+					</div>
+				</ul>
+			</div>
+			<div class="row we_do__owners">
+				<h4>Основатели компании</h4>
+				<div class="owner_list">
+					<div class="vodolasky">
+						<img src="img/vodolasky.png" alt="vodolasky">
+						<h5>Водолазский  С.</h5>
+					</div>
+					<div class="feoktisova">
+						<img src="img/feoktistova.png" alt="feoktisova">
+						<h5>Феоктистова Ю.</h5>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Content  HTML -->
-	
-	<!-- Content  HTML -->
+<section class="content">
+	<div class="container">
+		<div class="row content_row">
+			<h2>О компании</h2>
+			<div class="article_text">
+				<p>Искренне надеемся, что наше с Вами общение будет плодотворным, и каждому принесет ожидаемые результаты. Не ставя своей целью охватить необъятное, хотим представить Вам наш маленький коллектив и рассказать о наших возможностях и сферах юридической деятельности. Рекомендуем добавить наш сайт в закладки, на тот случай, если сейчас у Вас нет необходимости в помощи юристов и адвокатов.</p>
+				<p>Поскольку мы не стремимся загрузить каждого юриста и адвоката работой "от" и "до", на каждого клиента у нас всегда найдется достаточно времени. Сложные проблемы мы решаем тщательно проанализировав, как фактическую сторону дела, так и теоретические аспекты. Простые задачи выполняются быстро, и, главное, недорого.</p>				
+				<p>Основная сфера деятельности, конечно же, представительство в судах. По нашему мнению, юрист, который постоянно не практикуется в судах, рано или поздно теряет свою квалификацию. При этом мы готовы "вести" и сложные судебные процессы, связанные с государственными закупками, приватизацией предприятий, интеллектуальной собственностью; и совершенно простые дела по взысканию задолженности или страхового возмещения. </p>
+						<p>Помимо этого, мы всегда увлеченно и с интересом разрабатываем различные схемы и алгоритмы касающиеся юридической стороны бизнеса и коммерции, в части "предпринимательского" права и корпоративных отношений. Имеем большие наработки в проектировании международных контрактов.</p>
+						<p>Один из наших "коньков" - это трудовые право и кадровое делопроизводство. Мы готовы изящно и качественно выстраивать политику работодателей, направленную на максимально эффективное использование имеющихся трудовых ресурсов и экономию финансов. С другой стороны можем принципиально и непреклонно отстаивать интересы работников.</p>
+						<p>Давно и успешно мы осуществляем представительство организаций в Антимонопольной службе, связанное как с участим в различного рода торгах, так и с получением согласований в связи с антимонопольным регулированием.</p>
+						<p>Отдельное направление - земельные отношения и все что с ними связано, начиная от аукционов по продаже земельных участков, заканчивая изменением видов разрешенного использования и приватизацией земли.</p>
+						<p>Мы готовы обеспечить комплексную правовую безопасность юридического лица, и бизнеса в целом, на основе соблюдения закона и пожеланий менеджеров предприятия.</p>
+						<p>Мы стремимся к тому, чтобы приобретая наши юридические услуги, клиент, в итоге больше получал, нежели тратил.</p>
+			</div>
+		</div>
+	</div>
+</section>
+	<!-- Footer  HTML -->
+<footer class="main_footer">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-2 col-md-3 col-sm-3 d-none d-sm-flex">
+				<ul class="foot_mnu">
+				<li><a class="active" href="#">Главная</a></li>
+				<li><a href="#">Услуги</a></li>
+				<li><a href="#">Заказчики</a></li>
+			</ul>
+
+
+			</div>
+			<div class="col-lg-2 col-md-3 col-sm-3 d-none d-sm-flex">
+					<ul class="foot_mnu_more">
+							<li><a href="#">Новости</a></li>
+							<li><a href="#">Кейсы</a></li>
+							<li><a href="#">Статьи</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+
+			</div>
+			<div class="col-lg-4 col-md-6 col-sm-6 adres_row">
+				<div class="adres">
+					<a href="tel:+7 123 456 78 90">+7 123 456 78 90</a>	
+					<span>e-mail: <a href="mailto:shief@legaliti.ru">shief@legaliti.ru</a></span>		
+				</div>
+				<div class="copyright">
+					<p>© 2018 Все права защищены.</p>
+				</div>
+
+
+			</div>
+			<div class="col-lg-4 col-md-12 col-sm-12 social">
+				<div class="social_buttons">
+					<a href="#"><i class="fab fa-youtube"></i><span>youtube</span></a>
+					<a href="#"><i class="fab fa-facebook-f"></i><span>facebook</span></a>
+					<a href="#"><i class="fab fa-instagram"></i><span>instagram</span></a>
+					<a href="#"><i class="fab fa-vk"></i><span>vk</span></a>
+				</div>
+
+			</div>
+		</div>
+	</div>
+</footer>
 	<script src="libs/jquery/dist/jquery-3.3.1.min.js"></script>
 	<!-- <script src="libs/bootstrap/js/bootstrap.min.js"></script> -->
 	<script src="libs/fontawesome-all.min.js"></script>
