--- a/portfolio/tiny_light/index.html
+++ b/portfolio/tiny_light/index.html
@@ -113,7 +113,7 @@
 							<div class="feauture">
 									<i class="fas fa-code icon_ic"></i>
 								<div class="feauture__text">
-								<h4>HTML3 & CSS3 </h4>
+								<h4>HTML5 & CSS3 </h4>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
 								</div>
 							</div>
@@ -167,9 +167,9 @@
 	<div class="row">
 		<div class="col-lg-12">
 			
-			<p>HALOVIETNAM LTD <br>
+			<p>HALOBELARUS LTD <br>
 					66, Dang Van ngu, Dong Da <br>
-					Hanoi, Vietnam</p>
+					Minsk, Belarus</p>
 		</div>
 	</div>
 </div>
