--- a/portfolio/optima/index.html
+++ b/portfolio/optima/index.html
@@ -53,7 +53,7 @@
  -->
 
 	
-	<div class="preloader"><div class="pulse"></div></div>
+	<!-- <div class="preloader"><div class="pulse"></div></div> -->
 	
 	<!-- Header HTML -->
 <header class="main_header">
