--- a/portfolio/optima/index.html
+++ b/portfolio/optima/index.html
@@ -32,7 +32,7 @@
 	<!-- <link rel="stylesheet" href="libs/fotorama/fotorama.css"> -->
 	<!-- <link rel="stylesheet" href="libs/Selectric/selectric.css"> -->
 
-	<link rel="stylesheet" href="css/main.min.css">
+	<link async  rel="stylesheet" href="css/main.min.css">
 
 
 </head>
@@ -312,7 +312,7 @@
 <script src="libs/fotorama/fotorama.js"></script>
 <script src="libs/Selectric/jquery.selectric.min.js"></script>
 <script src="js/common.js"></script> -->
-<script src="js/scripts.min.js"></script> 
+<script async src="js/scripts.min.js"></script> 
 
 </body>
 </html>
