--- a/portfolio/menu/index.html
+++ b/portfolio/menu/index.html
@@ -37,6 +37,8 @@
 			 <li><a href="#">Официант</a></li>
 			 <li><a href="#">Кальянщик</a></li>
 			 <li><a href="#">Отзыв</a></li>
+			 <!-- <li><a href="#">Новый пункт</a></li>
+			 <li><a href="#">Еще пункт</a></li> -->
 		 </ul>
 	 </nav>
  </section>
