--- a/portfolio/menu/index.html
+++ b/portfolio/menu/index.html
@@ -32,6 +32,7 @@
 
  <section class="menu">
 	 <nav class="main_navigation">
+		 <img class="logo" src="img/logo.png" alt="logo">
 		 <ul>
 			 <li><a href="#">Меню</a></li>
 			 <li><a href="#">Официант</a></li>
