--- a/portfolio/jolobox/index.html
+++ b/portfolio/jolobox/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>OptimizedHTML 4</title>
+	<title>Jolobox - Сервис для привлечения клиентов</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
 	<!-- Template Basic Images End -->
 	
 	<!-- Custom Browsers Color Start -->
-	<meta name="theme-color" content="#000">
+	<meta name="theme-color" content="#ededed">
 	<!-- Custom Browsers Color End -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.min.css">
