--- a/portfolio/jolobox/index.html
+++ b/portfolio/jolobox/index.html
@@ -49,7 +49,9 @@
 			</ul>
 				<div class="lang_and__log_in">
 					<ul class="lang_switch">
-						<li class="lang_active"><a href="#">RU</a>
+						<li class="lang_active">
+							<a href="#">RU</a>
+							<ul><li><a href="#English">EN</a></li></ul>
 						</li>
 					</ul>
 					<a class="login_btn" href="#login">Войти в систему</a>
