--- a/portfolio/dino/index.html
+++ b/portfolio/dino/index.html
@@ -39,11 +39,11 @@
 				<ul>
 					<li class="active"><a href="#Home">Home</a></li>
 					<li><a href="#About">About us</a></li>
-					<li><a href="#Portfolio">Portfolio</a></li>
-					<li><a href="#Pricing">Pricing</a></li>
-					<li><a href="#Team">Team</a></li>
-					<li><a href="#Blog">Blog</a></li>
-					<li><a href="#Contact">Contact</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#pricing">Pricing</a></li>
+					<li><a href="#team">Team</a></li>
+					<li><a href="#blog">Blog</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -63,7 +63,7 @@
 	</header>
 
 	<div class="section_wrap__icon">
-		<a href="#history">
+		<a href="#advantages">
  <img src="img/anchor.svg" alt="ss">
  		</a>
 	</div>
@@ -72,7 +72,7 @@
 
 
 
-<section class="advantages">
+<section id="advantages" class="advantages">
 
 <div class="container">
 	<div class="row">
@@ -117,7 +117,7 @@
 </section>
 
 <!-- 3 секция -->
-<section id="history" class="history">
+<section id="About" class="history">
 	<div class="container">
 		<div class="history_wrapper">
 			<div class="history_images">
@@ -171,7 +171,7 @@
 
 
 <!-- 5 секция -->
-<section class="recent">
+<section id="portfolio" class="recent">
 	<h2>RECENT WORKS</h2>
 	<p class="recent_title">It has survived not only five centuries, but also the leap scrambled it to make a type.</p>
 					<div class="divider">
@@ -392,7 +392,7 @@
 
 <!-- 9 -->
 
-<section class="pricing">
+<section id="pricing" class="pricing">
 	<h3>OUR PRICING</h3>
 	<p>A 30 days free trial for all. A brief story about how this process works, keep an eye till the end.</p>
 		<div class="divider">
@@ -449,7 +449,7 @@
 </section>
 
 
-<section class="team">
+<section id="team" class="team">
 	<h2>OUR TEAM</h2>
 	<p>Meet the craziest team. Share your thoughts with them.</p>
 			<div class="divider">
@@ -553,7 +553,7 @@
 
 <!-- 11 -->
 
-<section class="blog">
+<section id="blog" class="blog">
 <h3>OUR BLOG</h3>
 <p>Suspendisse sed eros mollis, tincidunt felis eget, interdum eratullam sit amet odio.</p>
 			<div class="divider">
@@ -622,7 +622,7 @@
 <!-- 12 -->
 
 
-<section class="keep">
+<section id="contact" class="keep">
 	<h3>kEEP IN TOUCH</h3>
 	<p>Nullam sit amet odio eu est aliquet euismod a a urna. Proin eu urna suscipit, dictum quam nec. </p>
 				<div class="divider">
@@ -717,6 +717,9 @@
 				<p>Kazi Erfan © All Rights Reserved </p>
 			</div>
 		</div>
+	</div>
+	<div class="arrow_up">
+		<a href="#Home">></a>
 	</div>
 </footer>
 
