--- a/portfolio/form/index.html
+++ b/portfolio/form/index.html
@@ -17,7 +17,7 @@
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images End -->
-	
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&amp;subset=cyrillic" rel="stylesheet">
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
@@ -34,7 +34,7 @@
  <section class="main_section">
 <form class="jolobox_login" action="#">
 
-<input class="name" name="name" placeholder="email адрес" type="text"/>
+<input class="email" name="email" placeholder="email адрес" type="text"/>
 <input class="pass" placeholder="Пароль" name="password" type="password"/>
 <button type="submit">ВОЙТИ</button>
 <p>Еще не зарегистрировались? <a href="#">Регистрация</a> </p>
