--- a/portfolio/arilija/index.html
+++ b/portfolio/arilija/index.html
@@ -67,7 +67,7 @@
 
  <!-- 1 слайд -->
 
- <section class="tegnology">
+ <section class="main">
 	 <div class="container">
 		 <h1>Дизайн, <br> производство и установка <span>3D</span> полов в Литве</h1>
 		 <p>3D полы - это оригинальное современное дизайнерское решение. Такой пол представляет собой слой с фотоизображением,
@@ -76,20 +76,72 @@
 		<a class="readmore" href="#read">Подробнее</a>
 		<span class="scroll"><img src="img/arrow_down.svg" alt="arrow down"> Scroll</span>
 	 </div>
+	<div class="animation_images slide_1">
+		<img class="interior" src="img/interior.png" alt="interior">
+		<img class="volna" src="img/homepage/4.png" alt="volna">
+		<img class="volna2" src="img/homepage/5.png" alt="volna 2">
+		<img class="pyatno" src="img/homepage/6.png" alt="pyatno">
+		<img class="rybka" src="img/homepage/1.png" alt="rybka">
+		<img class="volna3" src="img/homepage/7.png" alt="volna 3">
+		<img class="pyatno2" src="img/homepage/2.png" alt="pyatno 2">
+	</div>
  </section>
 
-
-<div class="animation_images slide_1">
-	<img class="interior" src="img/interior.png" alt="interior">
-	<img class="volna" src="img/homepage/4.png" alt="volna"> 
-	<img class="volna2" src="img/homepage/5.png" alt="volna 2"> 
-	<img class="pyatno" src="img/homepage/6.png" alt="pyatno"> 
-	<img class="rybka" src="img/homepage/1.png" alt="rybka"> 
-	<img class="volna3" src="img/homepage/7.png" alt="volna 3"> 
-	<img class="pyatno2" src="img/homepage/2.png" alt="pyatno 2"> 
-</div>
-
 <!-- 2 слайд -->
+
+<section class="tehnology">
+	<div class="container">		
+		<div class="tehnology_wrapper">
+			<div class="tehnology_step">
+				<span><img src="img/tegnology/calculation.svg" alt="calculation"></span>
+				<h3>1. Оценка</h3>
+				<p>Оценка стоимости ремонта, согласование стоимости и прочее.</p>
+				<img src="img/tegnology/arrow.svg" alt="arrow right">
+			</div>
+
+			<div class="tehnology_step">
+				<span><img src="img/tegnology/attach.svg" alt="attach"></span>
+				<h3>2. Подготовка</h3>
+				<p>Выбор изображения, подготовка основания <br> 1-7 дней.</p>
+				<img src="img/tegnology/arrow.svg" alt="arrow right">
+			</div>
+
+			<div class="tehnology_step">
+				<span><img src="img/tegnology/layers.svg" alt="layers"></span>
+				<h3>3. Нанесение</h3>
+				<p>Нанесение <br> изображения 1-3 дня, в зависимости от сложности.</p>
+				<img src="img/tegnology/arrow.svg" alt="arrow right">
+			</div>
+
+			<div class="tehnology_step">
+				<span><img src="img/tegnology/sleeping-mat.svg" alt="sleeping"></span>
+				<h3>4. Финишный слой</h3>
+				<p>Нанесение финишного прозрачного слоя <br> 1 день.</p>
+				<img src="img/tegnology/arrow.svg" alt="arrow right">
+			</div>
+
+			<div class="tehnology_step">
+				<span><img src="img/tegnology/smile.svg" alt="smile"></span>
+				<h3>5. Наслаждайтесь</h3>
+				<p>Ходить можно через 1-2 дня,  финишная нагрузка через 7 дней.</p>
+				<img src="img/tegnology/arrow.svg" alt="arrow right">
+			</div>
+<img src="img/tegnology/line.svg" alt="line" class="line_around">
+		</div>
+	</div>
+
+
+	<div class="animated_images_tehnology">
+				<img class="interior_tehnology" src="img/interior.png" alt="interior"/>
+				<img class="olen_tehnology" src="img/tegnology/1.png" alt="olen"/>
+				<img class="pyatno_tehnology" src="img/tegnology/2.png" alt="pyatno"/>
+				<img class="pyatno2_tehnology" src="img/tegnology/5.png" alt="pyatno2"/>
+				<img class="trava_tehnology" src="img/tegnology/3.png" alt="trava"/>
+				<img class="trava2_tehnology" src="img/tegnology/4.png" alt="trava2"/>
+				<img class="trava3_tehnology" src="img/tegnology/6.png" alt="trava3"/>
+	</div>
+
+</section>
 
 </div> <!-- Page wrapper close. Always end-->
  
