--- a/portfolio/arilija/index.html
+++ b/portfolio/arilija/index.html
@@ -38,7 +38,7 @@
 	 <div class="container">
 		 <div class="header_wrapper">
 			 <div class="logo">
-				 <a class="logolink" href="/">
+				 <a class="logolink" href="https://nabozhev.github.io/portfolio/arilija/">
 									<img src="img/logo.svg" alt="3d Arilija logo" />
 									<p>Arilija</p>
 				</a>
