--- a/portfolio/arilija/etap_1.html
+++ b/portfolio/arilija/etap_1.html
@@ -79,7 +79,8 @@
 <section class="etap_1">
 	<div class="container">
 
-		<a style="margin-top:0px" href="/?tehnology" class="back"><img src="img/back.svg" alt="back arrow"></a>
+		<a style="margin-top:0px" href="https://nabozhev.github.io/portfolio/arilija/?tehnology" class="back"><img
+				src="img/back.svg" alt="back arrow"></a>
 		<br>
 		<div class="plane">
 			<h3>1. Оценка</h3>
