--- a/portfolio/arilija/index.html
+++ b/portfolio/arilija/index.html
@@ -46,10 +46,10 @@
 			 </div>
 	<nav>
 		<ul class="main_nav">
-			<li><a href="#tehn">Этапы и Технология</a></li>
-			<li><a href="#price">Цены</a></li>
-			<li><a href="#gall">Галерея</a></li>
-			<li><a href="#cont">Контакты</a></li>
+			<li><a href="https://nabozhev.github.io/portfolio/arilija/#tehn">Этапы и Технология</a></li>
+			<li><a href="https://nabozhev.github.io/portfolio/arilija/#price">Цены</a></li>
+			<li><a href="https://nabozhev.github.io/portfolio/arilija/#gall">Галерея</a></li>
+			<li><a href="https://nabozhev.github.io/portfolio/arilija/#cont">Контакты</a></li>
 			
 		</ul>
 		
