--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title>Subvert fl.ru Content-Watch</title>
+	<title>Subvert fl.ru Content-Watch 2022</title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
