--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Subvert fl.ru Content-Watch 2022</title>
-	<meta name="description" content="" />
+	<meta name="description" content="Набожев Дмитрий фрилансер. Беларусь" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="favicon.png" />
