--- a/kwork/index.html
+++ b/kwork/index.html
@@ -1,527 +1,70 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]><html lang="ru" class="lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html lang="ru" class="lt-ie9 lt-ie8"><![endif]-->
-<!--[if IE 8]><html lang="ru" class="lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html lang="ru">
-<!--<![endif]-->
+<html>
+
 <head>
-	<meta charset="utf-8" />
-	<title>Subvert fl.ru Content-Watch 2022</title>
-	<meta name="description" content="Набожев Дмитрий фрилансер. Беларусь" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="shortcut icon" href="favicon.png" />
-	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
-	<link rel="stylesheet" href="libs/bootstrap/bootstrap.min.css" />
-	<link rel="stylesheet" href="libs/font-awesome-4.2.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/media.css" />
+
+	<meta charset="utf-8">
+	<!-- <base href="/"> -->
+
+	<title>Nabozhev kwork - Portfolio items</title>
+	<meta name="description" content="Nabozhev kwork Portfolio items | портфолио фрилансера Дмитрия Набожева.">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+	<link rel="icon" href="images/favicon.png">
+	<meta property="og:image" content="images/preview.jpg">
+
+	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.js">
+
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/media.css">
+
 </head>
-<body>
-	<!--[if lt IE 9]>
-	<script src="libs/html5shiv/es5-shim.min.js"></script>
-	<script src="libs/html5shiv/html5shiv.min.js"></script>
-	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
 
-	<header>
-	<div class="bgimage">
-		<div class="container">
-			<div class="row">
+<body class="back-row-toggle splat-toggle">
+<div class="rain front-row"></div>
+<div class="rain back-row"></div>
 
-				<div class="browser col-md-12">
 
-					<div class="panel panel-primary">
-						<div class="panel-heading">
-							<div class="dotted clearfix">
 
-								<i class="fa fa-circle red"></i>
-								<i class="fa fa-circle yellow"></i>
-								<i class="fa fa-circle green"></i>
+<!--Header-->
 
-									</div>
-							<div class="search-box clearfix">
-								<div class="arrows">
-									<i class="fa fa-play flip"></i>
-									<i class="fa fa-play"></i>
-								</div>
-
-								<div class="search-panel">
-									<!--строка поиска-->
-								</div>
-
-							</div>
-						</div>
-
-
-						<div class="panel-body">
-							<div class="row fronttext">
-								<div class="col-md-12 col-xs-12">
-
-									<h1>Хотите защитить ваш контент от плагиата?</h1>
-									<span>Автоматическая проверка на уникальность<br/>
-										от 60 копеек за страницу в месяц</span>
-									</div>
-
-
-								</div>
-
-								<div class="row maincounter col-md-12">
-
-									<div class="col-md-5 col-xs-12 clearfix contw">
-										<img  src="img/content-watch.jpg" alt="content-watch"/>
-									</div>
-
-									<div class="col-md-1">
-
-									</div>
-
-									<!--счетчик-->
-									<div class="col-md-6 col-xs-12">
-
-										<div class="counterblock">
-											<h4>Купи подписку в течение 2 часов<br/> и получи <strong>25% скидки!</strong></h4>
-
-											<a href="#" class="btn btn-warning">Купить</a>
-											<br/>
-
-											<span class="timeleft">До конца акции:</span>
-
-											<div class="counter">
-
-												<div id="CDT"></div><!--Сам счетчик-->
-
-											</div>
-
-
-										</div>
-
-
-									</div>
-
-								</div>
-
-
-							</div>
-						</div>
-
-					</div>
-
-
-				</div>
-			</div>
-	  </div>
-		</header>
-
-	<!--Секция Преимущества-->
-
-	<article class="advantage">
-
-		<div class="container">
-			<div class="row col-md-12">
-
-				<h2>Преимущества уникального контента</h2>
-			</div>
-
-
-			<div class="row">
-				<div class="col-md-4 col-xs-12">
-					<div class="typicalBox">
-						<div class="img_wrapper">
-							<img src="img/icon_grafic.png" alt="grafic">
-						</div>
-						<h3>Рост позиций</h3>
-						<p>Уникальность контента - важный фактор ранжирования.</p>
-					</div>
-				</div>
-
-
-				<div class="col-md-4 col-xs-12">
-					<div class="typicalBox">
-
-						<div class="img_wrapper">
-							<img src="img/icon_man.png" alt="grafic">
-						</div>
-						<h3>Новые пользователи</h3>
-						<p>Чем выше позиции вашей страницы,<br/> тем больше пользователей<br/> придет к вам на сайт.</p>
-					</div>
-				</div>
-
-
-
-				<div class="col-md-4 col-xs-12">
-					<div class="typicalBox">
-
-						<div class="img_wrapper">
-							<img src="img/icon_like.png" alt="grafic">
-						</div>
-						<h3>Стабильность</h3>
-						<p>Сайты с неуникальным контентом<br/> могут легко попасть под санкции<br/> поисковых систем</p>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-	</article>
-
-
-	<!--Следующая секция-->
-
-
-
-	<article class="helpblock">
-		<div class="bgimage">
-
-			<div class="container titlehelpblock">
-			<h2>Чем мы можем быть полезны</h2>
-
-				<span>Предотвратить плагиат невозможно, важно вовремя принять меры!</span>
-
-				<div class="row">
-					<div class="col-md-4 col-xs-12">
-
-						<div class="divhelp">
-
-							<div class="imagewrapper">
-								<img src="img/icon_wheel.png" alt="wheel preferenses"/>
-							</div>
-							<h4>Автоматическая проверка</h4>
-							<p>На уникальность ваших страниц<br/>сэкономит ваше ценное<br/> время</p>
-
-						</div>
-
-
-					</div>
-					<div class="col-md-4 col-xs-12">
-
-						<div class="divhelp">
-
-							<div class="imagewrapper">
-								<img src="img/icon_list.png" alt="list preferenses"/>
-							</div>
-							<h4>Регулярные отчеты</h4>
-							<p>на почту вовремя сообщат<br/>о случаях плагиата</p>
-
-						</div>
-
-
-					</div>
-					<div class="col-md-4 col-xs-12">
-
-						<div class="divhelp">
-
-							<div class="imagewrapper">
-								<img src="img/icon_search.png" alt="search preferenses"/>
-							</div>
-							<h4>Мониторинг нарушителей</h4>
-							<p>отследит, когда плагиат вашего<br/>контента будет убран<br/>с других сайтов</p>
-
-						</div>
-
-					</div>
-				</div>
-
-
-				<div class="row">
-					<div class="col-md-12">
-						<a class="button_bye" href="#">Попробуйте месяц бесплатно!</a>
-					</div>
-
-				</div>
-
-			</div>
-			</div>
-		</article>
-
-
-
-<!--Следующая секция-->
-
-<section class="howitworks">
-
-<!--Полная версия-->
-
-<div class="desctop_vers">
+<!--Content-->
+<main class="content"> 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 col-xs-12 col-lg-12">
-
-				<div class="round-wrapper">
-
-				<h2>Как это работает?</h2>
-
-				<div class="imgwrapper">
-					<img src="img/pc_desctop_image.png" alt="desctop" title="Как это работает?" />
-
-					<div class="one"></div>
-						<span class="textone">Вы указываете адреса<br> сайтов, которые нужно<br/>защитить</span>
-					<div class="two"></div>
-					<span class="textwo">Мы регулярно ищем в<br> Интернете копии вашего<br> контента</span>
-					<div class="three"></div>
-					<span class="texthree">Дважды в неделю вы получаете<br> на почту отчеты с информацией о<br>найденных копиях</span>
-					<div class="four"></div>
-						<span class="textfour">Вы принимаете меры  к нарушителям</span>
-					<div class="five"></div>
-					<span class="textfive">В следующих отчетах<br>  вы видите, как<br>  удаляют копии с<br>сайтов-плагиаторов</span>
-
-				</div>
-
-				</div>
-
-
+	<section class="browser">
+		<div class="browser__header"><span></span><span></span><span></span>
+			<p>Kwork - Nabozhev Portfolio</p>
+		</div>
+		<div class="browser__body">
+			<div class="browser__body__panel">
+				<!--here code!-->
+			</div>
+			<div class="browser__body__viewport">
+ 
 			</div>
 		</div>
-	</div>
-</div>
-
-<!--Мобильная версия-->
-
-
-<div class="mobile_vers">
-
-<div class="container">
-	<div class="row">
-
-	<div class="col-md-12">
-
-		<div class="steps clearfix">
-			<h2>Как это работает?</h2>
-
-			<div class="step">
-
-				<ul>
-					<li>Вы указываете адреса сайтов, которые нужно защитить</li>
-					<li>Мы регулярно ищем в Интернете копии вашего контента</li>
-					<li>Дважды в неделю вы получаете на почту отчеты с информацией о найденных копиях</li>
-					<li>Вы принимаете меры  к нарушителям</li>
-					<li>В следующих отчетах вы видите, как удаляют копии с сайтов-плагиаторов</li>
-				</ul>
-			</div>
-
-		</div>
-
-
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-</section>
-
-<!--Секция-->
-
-<article class="prices">
-	<div class="bgimage">
-	<div class="container">
-	<h2>Цены на регулярную проверку</h2>
-		<div class="row minus">
-
-
-			<!--Блокнотик-->
-			<div class="col-md-4">
-			<div class="notefirst">
-			<h5>100</h5>
-			<span class="pages">страниц сайта</span>
-			<p>100 страниц сайта</p>
-			<span class="crossout">270р./мес</span>
-			<span class="pricespan">202р./мес</span>
-			<span class="gray">3 руб. за страницу в месяц</span>
-			<a href="#" class="btn btn-warning">Купить</a>
-			</div>
-
-			</div>
-
-				<!--Блокнотик 2-->
-
-			<div class="col-md-4">
-				<div class="notesecond">
-					<h5>500</h5>
-			<span class="pages">страниц сайта</span>
-			<p>500 страниц сайта</p>
-			<span class="crossout">490р./мес</span>
-			<span class="pricespan">367р./мес</span>
-			<span class="gray">1 руб. за страницу в месяц</span>
-			<a href="#" class="btn btn-warning">Купить</a>
-				</div>
-			</div>
-
-				<!--Блокнотик 3-->
-
-			<div class="col-md-4">
-			<div class="notethird">
-			<h5>2000</h5>
-			<span class="pages">страниц сайта</span>
-			<p>2000 страниц сайта</p>
-			<span class="crossout">990р./мес</span>
-			<span class="pricespan">742р./мес</span>
-			<span class="gray">50 коп. за страницу в месяц</span>
-			<a href="#" class="btn btn-warning">Купить</a>
-
-				</div>
-			</div>
-		</div>
-
-	</div>
-
-</div>
-
-</article>
-
-
-
-	<!--Секция отзывы -->
-
-	<article class="reviews">
-		<div class="container">
-		<div class="grafica"></div>
-			<h2>Отзывы</h2>
-			<div class="row plashki">
-				<div class="col-md-4 col-md-12">
-					<div class="plashka">
-						<p>Всех клиентов подключаю к сервису <br/>— в одном месте контроль уникальности всех сайтов! Теперь нужно лишь разослать письма нарушителям, и работа сделана!</p>
-						<span>Константин,<br/> SEO-специалист</span>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-md-12">
-
-					<div class="plashka">
-						<p>Спасибо Вам за то, что Вы есть!!!<br> Очень помогаете в моей работе. Пробовала разные ресурсы и возвращалась опять к Вам</p>
-						<span>Марина,<br/> SEO-специалист</span>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-md-12">
-
-					<div class="plashka">
-						<p>Начал контроль работы контент-менеджеров через ваш сайт. Быстро выяснилось, что сотрудники часто брали контент с других сайтов, “забывая” переписывать. Теперь все<br/> под контролем</p>
-						<span class="up">Валентин,<br/>Предприниматель</span>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-
-				<div class="col-md-12-col-xs-12">
-					<div class="bg_color">
-					<div class="aboutcontentwatch">
-
-						<h3>О проекте Content Watch</h3>
-						<ul>
-							<li>Работаем с 2011 года</li>
-							<li>Разработали специальный алгоритм, умеющий определять рерайт </li>
-							<li>Каждый день проверяем более 40.000 текстов</li>
-							<li>Успешно боремся со всеми основными способами уникализации текстов</li>
-							<li>Постоянно развиваем инфраструктуру и оптимизируем работу сервиса</li>
-							<li>Планируем изменения на основе потребностей и отзывов пользователей</li>
-						</ul>
-						</div>
-					</div>
-
-				</div>
-
-			</div>
-
-		</div>
-
-	</article>
-
-<!--Секция Ответы на вопросы -->
-
-	<footer class="answer">
-		<div class="bgimage">
-<div class="container">
-	<div class="row">
-	<h2>Ответы на вопросы</h2>
-		<div class="col-md-12">
-
-
-			<div class="ans">
-		<!--Ответы на вопросы -->
-		<div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
-	<div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingTwo">
-			<h4 class="panel-title">
-				<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-					Как часто проходит проверка на уникальность?
-
-				</a>
-			</h4>
-					<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
-
-			<div class="panel-body">
-				Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-			</div>
-		</div>
-		</div>
-
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingThree">
-			<h4 class="panel-title long">
-				<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-					Что делать, когда система найдет копию моего контента на другом сайте?
-				</a>
-			</h4>
-
-				<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false">
-			<div class="panel-body">
-				Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-			</div>
-		</div>
-		</div>
-
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" role="tab" id="headingFour">
-			<h4 class="panel-title">
-				<a class="collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-					Можно ли предотвратить воровство контента?
-				</a>
-			</h4>
-				<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false">
-			<div class="panel-body">
-				Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-			</div>
-		</div>
-		</div>
-
-	</div>
-</div>
-
-			</div><!--Закрывает ans -->
-
-
+	</section>
 		</div>
 	</div>
 
 
-	<div class="row">
-		<div class="col-md-12">
-			<a class="button_bye" href="#">Попробуйте месяц бесплатно!</a>
-		</div>
+	</main>
+<!--Footer-->
 
-	</div>
 
-</div><!--Закрывает container -->
-</div><!--Закрывает фон -->
-	</footer>
 
-<!--End Page-->
-	<script src="libs/jquery/jquery-1.11.1.min.js"></script>
-	<script src="libs/bootstrap/bootstrap.min.js"></script>
+	<script src="libs/jquery/jquery-3.6.0.min.js"></script>
+	<script src="node_modules/swiper/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+	<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+
 	<script src="js/common.js"></script>
-	<script src="js/countdown.js"></script>
-	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
-
 
 </body>
+
 </html>
