--- a/portfolio/cybertruck/index.html
+++ b/portfolio/cybertruck/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>Simple Starter</title>
+	<title>Tesla Cybertruck</title>
 	<meta name="description" content="Simple Starter Description">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
